# fight-club

./: .git-rebase-script-template.txt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  .sops.yml  CONTEXT.md  ERRORS.md  GIT-SQUASH-README.md  README.md  SQUASH-NOW.txt  SQUASH-VISUALIZATION.md  TODOS.md  common.yml  compose.yaml  docker-compose.yml  encrypt-sops.sh  git-rebase-plan.md  git-squash-alternative.sh  network.yaml  network.yml  pyproject.toml  renovate.json5
adguard/: docker-compose.yml
adguardhome/: docker-compose.yml
arr_stack/: docker-compose.yml
authentik/: .env.example  docker-compose.yml
autobrr/: docker-compose.yml
autoheal/: docker-compose.yml
backup/: .env.example  Dockerfile  docker-compose.yml
bazarr/: docker-compose.yml
beets/: Dockerfile  config.yaml  docker-compose.yml  heavy.yaml  whitelist.txt
cloudflare-ddns/: docker-compose.yml
cross-seed/: docker-compose.yml
deemix/: docker-compose.yml
diun/: diun.secrets.yml  diun.yml  docker-compose.yml  images.yml
dozzle/: docker-compose.yml
emby/: compose.yaml  docker-compose.yml
flaresolverr/: compose.yaml  docker-compose.yml
freshrss/: docker-compose.yml
gluetun/: docker-compose.yml  post-rules.txt  znc.md
homarr/: docker-compose.yml
infisical/: docker-compose.yml
infrastructure/: docker-compose.yml
jellyfin/: Dockerfile  docker-compose.yml
jellysearch/: docker-compose.yml
jellyseerr/: docker-compose.yml
jellystat/: docker-compose.yml
kapowarr/: docker-compose.yml
komf/: docker-compose.yml
komga/: docker-compose.yml
(+125 files in other folders)
